# hurstexponent

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
datasets/: stock_tsla.csv
hurst_exponent/: __init__.py  acf.py  hurst_exponent.py
hurst_exponent/util/: utils.py
hurstexponent/: hurst_exponent.py
hurstexponent.egg-info/: PKG-INFO
tests/: hurst_tests.py  test_hurst.py
util/: generate_series.py  utils.py
