[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hurstexponent"
version = "1.0.0"
description = "Hurst exponent estimator"
authors = ["Anastasia Bugeenko <anabugaenko@gmail.com>"]
license = "MIT"
homepage = "https://github.com/anabugaenko/hurstexponent"
repository = "https://github.com/anabugaenko/hurstexponent"
keywords = ["hurst", "autocorrelation", "time-series", "fractals"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research"
]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
scipy = "^1.11.2"
numpy = "^1.25.2"
pandas = "^2.1.0"
typing = "^3.5"
statsmodels = "^0.14.0"
hurst = "^0.0.5"
matplotlib = "^3.7.2"

[tool.poetry.dev-dependencies]
pylint = "^2.17.5"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
pytest = "^7.4.1"
pytest-mock = "^3.11.1"
black = "^23.7.0"

[build]
include = ["README.md"]
