[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hurst-exponent"
version = "1.0.0"
description = "Hurst exponent estimator"
authors = ["Anastasia Bugeenko <anabugaenko@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anabugaenko/hurst_exponent"
repository = "https://github.com/anabugaenko/hurst_exponent"
keywords = ["hurst", "autocorrelation", "time-series", "fractals"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research"
]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "*"
numpy = "*"
pandas = "*"
typing = "*"
statsmodels = "*"
hurst = "*"
stochastic = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
# Add any development dependencies you need here

[build]
include = ["README.md"]
